[tool.poetry]
requires-poetry = ">=2.0"

[project]
name = "pylingual"
version = "0.0.1"
description = "A Python bytecode decompilation tool, supporting versions 3.6 - 3.13"
authors = [ {name = "syssec-utd"} ]
keywords = ["python", "decompilation", "pylingual", "reversing", "decompiler", "bytecode"]
license = "GPL-3.0-only"

readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asttokens",
    "datasets",
    "huggingface-hub",
    "matplotlib",
    "networkx",
    "numpy",
    "pydot",
    "requests",
    "tokenizers",
    "torch",
    "tqdm",
    "rich",
    "seqeval",
    "transformers==4.46.1",
    "transformers[torch]",
    "xdis",
    "click"
]

[project.urls]
homepage = "https://pylingual.io"

[project.scripts]
pylingual = "pylingual.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# linter and formatter
[tool.ruff]
# Exclude commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
target-version = "py311"
line-length = 240
indent-width = 4

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true
docstring-code-line-length = "dynamic"
